sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:3: error: not found: value l
  l=getValueCount()
  ^AlgInsertionSort:4: error: not found: value l
  for (i <- 1 to l-1){
                 ^AlgInsertionSort:5: error: not found: value v
    v=getValue(i)
    ^AlgInsertionSort:7: error: not found: value v
    	if(getValue(i-j-1)>v){
                           ^